--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "chalk": "^1.0.0",
     "child-process-promise": "^1.1.0",
     "commander": "^2.8.1",
+    "gulp-mustache": "^1.0.2",
+    "gulp-tap": "^0.1.3",
     "mkdirp": "^0.5.1",
     "mu2": "^0.5.20",
     "require-directory": "^2.1.0",
