--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^2.9.25",
+    "camel-case": "^1.1.2",
     "chalk": "^1.0.0",
     "child-process-promise": "^1.1.0",
     "commander": "^2.8.1",
@@ -14,6 +15,7 @@
     "gulp-tap": "^0.1.3",
     "mkdirp": "^0.5.1",
     "mu2": "^0.5.20",
+    "param-case": "^1.1.1",
     "pascal-case": "^1.1.1",
     "require-directory": "^2.1.0",
     "rimraf": "^2.3.4"
