--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "author": "Mike Grabowski <grabbou@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bl": "^0.9.4",
     "bluebird": "^2.9.25",
     "camel-case": "^1.1.2",
     "chalk": "^1.0.0",
     "child-process-promise": "^1.1.0",
     "commander": "^2.8.1",
-    "gulp-mustache": "^1.0.2",
     "gulp-tap": "^0.1.3",
     "mkdirp": "^0.5.1",
     "mu2": "^0.5.20",
+    "mustache": "^2.0.0",
     "param-case": "^1.1.1",
     "pascal-case": "^1.1.1",
     "require-directory": "^2.1.0",
