Super POF for adding cursors, to be improved

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Mike Grabowski <grabbou@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "babel": "^5.4.7",
     "bl": "^0.9.4",
     "bluebird": "^2.9.25",
     "camel-case": "^1.1.2",
@@ -20,6 +21,7 @@
     "param-case": "^1.1.1",
     "pascal-case": "^1.1.1",
     "path-case": "^1.1.1",
+    "recast": "^0.10.12",
     "require-directory": "^2.1.0",
     "rimraf": "^2.3.4"
   },
