--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chalk": "^1.0.0",
     "child-process-promise": "^1.1.0",
     "commander": "^2.8.1",
+    "glob": "^5.0.9",
     "gulp-conflict": "^0.4.0",
     "gulp-tap": "^0.1.3",
     "mkdirp": "^0.5.1",
