--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "commander": "^2.8.1",
     "glob": "^5.0.9",
     "gulp-conflict": "^0.4.0",
-    "gulp-tap": "^0.1.3",
+    "gulp-if": "^1.2.5",
+    "gulp-ignore": "^1.2.1",
+    "map-stream": "0.0.5",
     "mkdirp": "^0.5.1",
     "mu2": "^0.5.20",
     "mustache": "^2.0.0",
