--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chalk": "^1.0.0",
     "child-process-promise": "^1.1.0",
     "commander": "^2.8.1",
+    "core-object": "0.0.2",
     "gulp-conflict": "^0.4.0",
     "gulp-if": "^1.2.5",
     "gulp-ignore": "^1.2.1",
