--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "child-process-promise": "^1.1.0",
     "commander": "^2.8.1",
     "core-object": "0.0.2",
+    "gulp": "^3.8.11",
     "gulp-conflict": "^0.4.0",
     "gulp-if": "^1.2.5",
     "gulp-ignore": "^1.2.1",
+    "lodash": "^3.9.2",
     "map-stream": "0.0.5",
     "mkdirp": "^0.5.1",
     "mustache": "^2.0.0",
