--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ node_js:
   - "1.0"
   - "1.8"
 sudo: false
+before_script: "npm install coveralls@2.10.0"
 script: "npm run-script test-ci"
-after_script: "npm install coveralls@2.10.0 && cat ./coverage/lcov.info | coveralls"
