--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "camel-case": "^1.1.2",
     "chalk": "^1.0.0",
     "child-process-promise": "^1.1.0",
+    "cli-spinner": "^0.2.1",
     "commander": "^2.8.1",
     "core-object": "0.0.2",
     "gulp": "^3.8.11",
