--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "este-cli": "./bin/cli"
   },
   "scripts": {
-    "test": "mocha --globals opts --reporter spec --bail --check-leaks test/",
-    "test-ci": "istanbul cover ./node_modules/mocha/bin/_mocha --globals opts --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "test": "mocha --globals opts --reporter spec --bail --check-leaks test/ test/**/*.js",
+    "test-ci": "istanbul cover ./node_modules/mocha/bin/_mocha --globals opts --report lcovonly -- -R spec test/**/*.js  && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "license": "MIT",
   "repository": {
